<resources>
    <string name="title_home">Home</string>
    <string name="fback">Feedback</string>
    <string name="us_dollar">US$</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps_api_key">AIzaSyBYCwYs84Buc0ZlFVBrxhWrQaQBSiZ4EwM</string>
    <string name="kcb_bank_field_agent">Eclectics Bank - Field Agent</string>
    <string name="login_title"><![CDATA[Enter the phone number you registered with\nat the branch]]></string>
    <string name="email_address">Email Address</string>
    <string name="lookup_title">Enter the phone number you registered with at the branch</string>
    <string name="password">Password</string>
    <string name="password_reset">Password Reset</string>
    <string name="sign_in">SIGN IN</string>
    <string name="fa_hezekiah_kipngetich_32566789">FA: Hezekiah Kipngetich - 32566789</string>
    <string name="onboard_account">Customer Onboarding</string>
    <string name="existing_account">Existing Customer</string>
    <string name="application_requests">Application Requests</string>
    <string name="onboard_merchant">Onboard Merchant / Agent</string>
    <string name="loan_application">Loan Application &amp; View</string>
    <string name="customer_loans">Loans</string>
    <string name="customer_assessment">Assessment</string>
    <string name="use_id">Search customer with ID Number or Name</string>
    <string name="use_id_loan">Search customer with ID Number or Name</string>
    <string name="quick_reports">Quick Reports</string>
    <string name="sales_target">Sales Target</string>
    <string name="bill_payment">Bill Payment</string>
    <string name="diary">Diary</string>
    <string name="mileage">Mileage</string>
    <string name="agent_field">Customer 360 View</string>
    <string name="customer_feedback">Customer Feedback</string>
    <string name="agent_geomap">Agent / Merchant Geomap</string>
    <string name="customer_geomap">Customer Geomap</string>
    <string name="customer_complains">Customer Complains</string>
    <string name="customers_complains">Customer\'s Complains</string>
    <string name="agent_complains">Agent / Merchant Complains</string>
    <string name="asset_management">Asset Management</string>
    <string name="new_customers">New Customers</string>
    <string name="existing_customers">Existing Customers</string>
    <string name="select_category">Select Category</string>
    <string name="continue_">CONTINUE</string>
    <string name="search">SEARCH</string>
    <string name="search_for_account">Search for Account</string>
    <string name="enter_account">Enter Account Number</string>
    <string name="new_merchant_agents">New Merchant / Agents</string>
    <string name="existing_merchant_agents">Existing Merchant / Agents</string>
    <string name="account_type">Account Type</string>
    <string name="select_account">Select Account</string>
    <string name="select_type">Select Type</string>
    <string name="merchant_agent_type">Merchant/ Agent Type</string>
    <string name="_360_degree_merchant_agent_summary">360 Degree Customer Summary</string>
    <string name="select_type_of_customers">Select Type of Customers</string>
    <string name="acc_katani_pharmarcy">ACC: KATANI PHARMARCY - \n01XXXXX4282</string>
    <string name="agent_no_567898">Agent no. 567898</string>
    <string name="tel_0749924243">Tel: 0749924243</string>
    <string name="view_transaction_analysis">View Transaction Analysis</string>
    <string name="view_commissions_analysis">View Commissions Analysis</string>
    <string name="agent_merchant_loan_status">Merchant Loan Status</string>
    <string name="online_questionnaire">Online Questionnaire Survey</string>
    <string name="merchant_location_details">Merchant Location Details</string>
    <string name="agent_merchant_complains">Agent / Merchant Complains</string>
    <string name="select_reference_type">Select Reference Type</string>
    <string name="merchants_agents">Merchant / Agent</string>
    <string name="customers">Customers</string>
    <string name="select_type_of_complain">Select Type of Complain</string>
    <string name="search_account">SEARCH ACCOUNT</string>
    <string name="type_of_complain">Type of Complain</string>
    <string name="atm_card">ATM CARD</string>
    <string name="subject">Subject</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="message">Message</string>
    <string name="enter_message">Enter Message</string>
    <string name="attach_document">Attach Document</string>
    <string name="submit_message">SUBMIT MESSAGE</string>
    <string name="customer_id">Customer ID</string>
    <string name="merchant_agent_info">Merchant / Agent Info</string>
    <string name="update">UPDATE</string>
    <string name="merchant_agent_details">Merchant / Agent Details</string>
    <string name="contact_person_details">Contact Person Details</string>
    <string name="liquidation_details">Liquidation Details</string>
    <string name="physical_address">Physical Address</string>
    <string name="admin_user_details">Admin User Details</string>
    <string name="agent_images">Agent\'s Business Images</string>
    <string name="business_images">Business Images</string>
    <string name="personal_images">Personal Images</string>
    <string name="agent_personal_images">Agent\'s Personal Images</string>
    <string name="customer_info">Customer Info</string>
    <string name="acc_current_account">ACC: CURRENT ACCOUNT -\n 012XXXXX4421</string>
    <string name="martin_omondi_chepkirui">Martin Omondi Chepkirui</string>
    <string name="id_253672883">ID: 253672883</string>
    <string name="customer_details">Customer Details</string>
    <string name="basic_info">Basic Information</string>
    <string name="add_details">Additional Details</string>
    <string name="bs_details">Business Details</string>
    <string name="bs_address">Business Address</string>
    <string name="nok_details">Next of Kin Details</string>
    <string name="bank_account_details">Bank Account Details</string>
    <string name="loan_status">Loan Status</string>
    <string name="merchant_agent_loan_status">Merchant/Agent Loan Status</string>
    <string name="customer_loan_status">Customer Loan Status</string>
    <string name="id_passport_photos">ID and Passport Photos</string>
    <string name="active_channels">Active Channels</string>
    <string name="manage_account">Manage Account</string>
    <string name="agent_location">Agent Location</string>
    <string name="make_call">MAKE CALL</string>
    <string name="get_directions">GET DIRECTIONS</string>
    <string name="select_type_of_account">Select Type of Account</string>
    <string name="create_loan_origination_for_agent_customers">Create Loan Origination for Customer</string>
    <string name="customers_application">Customer\'s Application</string>
    <string name="loan_application_title">Loan Application</string>
    <string name="acc_martin_ndungu">ACC: MARTIN NDUNGU -\n01XXXXX4231</string>
    <string name="loan_limit">Loan Limit</string>
    <string name="kes_10_000_000_0">ZWD. 10,000,000.0</string>
    <string name="calculate_loan">Calculate Loan</string>
    <string name="enter_loan_amount">Enter Loan Amount</string>
    <string name="calculate">CALCULATE</string>
    <string name="period">Repayment Period</string>
    <string name="interest_rate">Interest Rate %</string>
    <string name="apply">APPLY</string>
    <string name="reset">RESET</string>
    <string name="monthly_installments">Monthly Installments</string>
    <string name="repayment_period_24_0">Repayment Period\n24.0</string>
    <string name="total_interest_n1_300_000">Total Interest\n1,300,000</string>
    <string name="other_deductions">*Other deductions and changes may apply</string>
    <string name="purpose">Purpose</string>
    <string name="choose_an_asset">Choose an Asset</string>
    <string name="enter_serial">Enter Serial</string>
    <string name="submit_asset">SUBMIT ASSET</string>
    <string name="attach_three_3_photos_of_the_asset">Attach a Photo of the Asset</string>
    <string name="_265_743_00">265,743.00</string>
    <string name="monthly_transaction_report">Monthly Transaction Report</string>
    <string name="questionnaire_survey">Questionnaire Survey</string>
    <string name="monthly_commission_report">Monthly Commission Report</string>
    <string name="merchant_loans_status">Merchant Loans Status</string>
    <string name="active_loan">Active Loan</string>
    <string name="due_date_24_june_2023">Due Date:24 JUN 2023</string>
    <string name="refresh">REFRESH</string>
    <string name="repayments_01xxxxxx44282">REPAYMENTS - 01XXXXXX44282</string>
    <string name="kes_250_879">ZWD 250,879</string>
    <string name="available_balance">AVAILABLE BALANCE</string>
    <string name="merchant_questionnaire_survey">Merchant Questionnaire Survey</string>
    <string name="customer_experience">Customer Experience</string>
    <string name="customer_experience_card_questions">• Is the pos communicate stable ?\n\n
    • Is your commissions paid on time ?\n\n
    • Are customers happy with our services ?\n\n
    • What additional services are they interested in\n\n
    • What else can Eclectics Bank improve to serve them better\n\n</string>
    <string name="open">OPEN</string>
    <string name="_1_is_the_pos_communication_stable">1. Is the pos communication stable?</string>
    <string name="_2_are_your_commissions_paid_on_time">2. Are your commissions paid on time</string>
    <string name="_3_are_customers_happy_with_our_services">3. Are customers happy with our services?</string>
    <string name="_4_what_additional_services_are_they_interested_in">4. What additional services are they interested in?</string>
    <string name="_5_what_else_can_kcb_bank_improve_to_serve_them_better">5. What else can Eclectics Bank improve to serve them better?</string>
    <string name="submit_survey">Submit Survey</string>
    <string name="capture_customer_photo">Capture Customer Photo</string>
    <string name="take_photo">TAKE PHOTO</string>
    <string name="work_details">Work Details</string>
    <string name="where_do_you_work">Where do you work?</string>
    <string name="type_of_employment">Type of Employment</string>
    <string name="income_band">Income Band</string>
    <string name="purpose_for_opening_this_account">Purpose for opening this account?</string>
    <string name="enter_business_name">Enter Business Name</string>
    <string name="surname">Surname</string>
    <string name="business_mobile_number">Business Mobile Number</string>
    <string name="first_name">First Name</string>
    <string name="business_email_address">Business Email Address</string>
    <string name="select_business_type">Select Business Type</string>
    <string name="last_name">Last Name</string>
    <string name="nature_of_business">Nature of Business</string>
    <string name="select_liquidation_type">Select Liquidation Type</string>
    <string name="liquidation_rate">Liquidation Rate</string>
    <string name="select_bank_name">Select Bank Name</string>
    <string name="bank_code">Bank Code</string>
    <string name="select_branch_name">Select Branch Name</string>
    <string name="account_name">Account Name</string>
    <string name="account_number">Account Number</string>
    <string name="verification_successful">Verification successful</string>
    <string name="you_can_reset">We have sent you a 4-digit default to the phone number used during registration. Go ahead and reset your pin to access your account!</string>
    <string name="title_signature_capture">Signature Pad</string>
    <string name="signature_instructions">Double tap to clear signature.</string>
    <string name="submit_signature">Done</string>
</resources>