<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:fillViewport="true"

    >

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/tvOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_15dp"
        android:layout_marginEnd="@dimen/_15dp"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintTop_toBottomOf="@+id/animation"
        android:text="@string/verification_successful"/>
    <TextView
        android:id="@+id/tvReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:gravity="center"
        android:textSize="@dimen/_13sp"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvOne"
        android:text="@string/you_can_reset"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnREGISTER"
        style="@style/AppTheme.Button.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/continue_"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvReg"
        android:layout_marginBottom="@dimen/_20dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>

